# flipkart-sde3-machine-coding

./: README.md  pyproject.toml
src/: __init__.py  application.py  guidelines.txt  job_entity.py  job_scheduler.py  job_status.py  logger.py  worker.py
tests/: conftest.py
