[project]
name = "Machine-Code"
version = "0.1.0"
description = "Flipkart-SDE3-Machine-Coding"
authors = [
    {name = "elnickkx",email = "nikkhilbutola13@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "kink (>=0.8.1,<0.9.0)"
]
packages={}

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
fastapi = "^0.115.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


